--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,45 +1,25 @@
 ---
 driver:
-  name: ec2
-  aws_ssh_key_id: your_key
-  region: eu-west-1
-  availability_zone: b
-  require_chef_omnibus: true
-  instance_type: m1.small
-  associate_public_ip: true
-  interface: dns
-  security_group_ids: ["your SG ID"]
-  shared_credentials_profile: default
-
-verifier: 
-  name: inspec
+  name: vagrant
 
 provisioner:
-  name: chef_solo
-  client_rb:
-    audit_mode: :enabled
+  name: chef_zero
+  # You may wish to disable always updating cookbooks in CI or other testing environments.
+  # For example:
+  #   always_update_cookbooks: <%= !ENV['CI'] %>
+  always_update_cookbooks: true
 
-transport:
-  ssh_key: C:/ssh/key/path
-  connection_timeout: 10
-  connection_retries: 5
+verifier:
+  name: inspec
 
 platforms:
-  - name: windows-2012r2
-    driver:
-      image_id: win2012_ami
-    tags: {
-      Name: "my-kitchen win2012 node",
-        created-by: "my-test-kitchen-win2012"
-    }
-         
+  - name: windows-2016
+    os_type: windows
+    transport:
+      name: winrm
+      elevated: true
+
 suites:
   - name: default
     run_list:
-#      - recipe[base-win2012-hardening::enable_winrm_access]
-      - recipe[base-win2012-hardening::default]
-    attributes:
-    verifier:
-      inspec_tests:
-        - https://github.com/dev-sec/windows-hardening-benchmark
-        
+      - recipe[windows-security-policy::test]
